@startuml

abstract class Lembrete{
    string descricao;
    string tag;
    int id;
    bool arquivado;


    getDescricao();
    getTag();
    setDescricao();
}

class LembreteSimples extends Lembrete{
}

class LembreteTarefa extends Lembrete{
    string deadline;

    getDeadline();
    setDeadline();
}

class Sistema{
    string visualizarDashboard();
    void criarLembrete();
    void criarLembreteTarefa();
    void arquivarLembrete(id);
    string verLembretesArquivados();
    string buscarLembrete(id);
    }

LembreteSimples -- Sistema
LembreteTarefa -- Sistema

@enduml
